Lib/c.err
mkdir -p ../Debug/O
cc -c -g -I. -o ../Debug/O/BMTick.o BMTick.c
BMTick.c: In function ‘BMTick_Init’:
BMTick.c:175:47: error: ‘struct BMFSM’ has no member named ‘ddctx’; did you mean ‘ctx’?
  175 |     BMTickCtx_pt ctx = (BMTickCtx_pt)tickptr->ddctx;
      |                                               ^~~~~
      |                                               ctx
BMTick.c: In function ‘BMTick_Deinit’:
BMTick.c:194:47: error: ‘struct BMFSM’ has no member named ‘ddctx’; did you mean ‘ctx’?
  194 |     BMTickCtx_pt ctx = (BMTickCtx_pt)tickptr->ddctx;
      |                                               ^~~~~
      |                                               ctx
BMTick.c: In function ‘BMTick_Start’:
BMTick.c:209:47: error: ‘struct BMFSM’ has no member named ‘ddctx’; did you mean ‘ctx’?
  209 |     BMTickCtx_pt ctx = (BMTickCtx_pt)tickptr->ddctx;
      |                                               ^~~~~
      |                                               ctx
BMTick.c: In function ‘BMTick_Stop’:
BMTick.c:225:47: error: ‘struct BMFSM’ has no member named ‘ddctx’; did you mean ‘ctx’?
  225 |     BMTickCtx_pt ctx = (BMTickCtx_pt)tickptr->ddctx;
      |                                               ^~~~~
      |                                               ctx
make: *** [makefile:52: ../Debug/O/BMTick.o] Error 1
